--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,8 +13,10 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
+  --ifm-code-font-size: 99%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  font-size: 20px;
+  font-family: Helvetica, sans-serif;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
